@@ -128,6 +128,8 @@ class ManageChannelsForm(crud.CrudForm):
             vocabulary='Scheduler Vocabulary')
 
         fields += field.Fields(collector, scheduler)
+        
+        fields += field.Fields(IChannel).select('subscribeable')
 
         return fields
 
@@ -370,7 +372,7 @@ class EditChannelForm(z3c.form.form.EditForm):
             vocabulary='Scheduler Vocabulary')
         
         fields += field.Fields(collector, scheduler)
-        fields += field.Fields(IChannel).select('description')
+        fields += field.Fields(IChannel).select('description', 'subscribeable')
         fields['description'].widgetFactory[
             z3c.form.interfaces.INPUT_MODE] = wysiwyg.WysiwygFieldWidget
 
